<resources>
    <string name="app_name">MyCalculator</string>
    <string name="button_1_text">1</string>
    <string name="button_2_text">2</string>
    <string name="button_3_text">3</string>
    <string name="button_add_text">+</string>
    <string name="button_4_text">4</string>
    <string name="button_5_text">5</string>
    <string name="button_6_text">6</string>
    <string name="button_sub_text">-</string>
    <string name="button_7_text">7</string>
    <string name="button_8_text">8</string>
    <string name="button_9_text">9</string>
    <string name="button_mul_text">*</string>
    <string name="button_0_text">0</string>
    <string name="button_point_text">.</string>
    <string name="button_result_text">=</string>
    <string name="button_div_text">/</string>
    <string name="result_hint">0</string>
    <string name="button_reset_text">C</string>
    <string name="helloWorldThemeText">HelloWorldTheme</string>
    <string name="myThemeText">MyTheme</string>
</resources>