<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<com.google.android.material.textview.MaterialTextView
    android:id="@+id/text_result"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:hint="@string/result_hint"
    android:layout_marginTop="@dimen/margin_field"
    android:layout_marginBottom="@dimen/margin_field"
    android:textSize="@dimen/button_size"/>

    <include
        layout="@layout/keyboard_layout"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/helloWorldThemeRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/helloWorldThemeText"
            android:textSize="@dimen/radioGroupTextSize"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/MyThemeRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myThemeText"
            android:textSize="@dimen/radioGroupTextSize"/>

    </RadioGroup>

</LinearLayout>